# fermigier.com

./: .editorconfig  .gitignore  Makefile  Procfile  nginx.conf  package.json  pyproject.toml  tailwind.config.js  tasks.py
assets/css/: 11.styles.8ffc36d2.css  styles.css
assets/styles/: main.min.css
blog/: 2022-10-26-conference-logiciel-libre-souverainete.md
blog/2022/10/: conference-logiciel-libre-souverainete.md
blog/2022/12/: comment-le-logiciel-libre-peut-repondre-au-defi-de-la-souverainete-numerique-europeenne.md
blog/2024/01/: ipp-filles-maths.md
blog/2024/03/: adoption-linux-machines-bureau-accelere.md
blog/2024/07/: summary-of-the-ospos-for-good-2024-conference.md  the-monoculture-nightmare-a-lesson-from-crowdstrikes-recent-crisis.md
blog/2024/11/: eu-linux.md  eurostack-conference-notes.md
blog/2025/01/: comments-on-the-share-it-act.md  un-article-du-monde-sur-le-logiciel-libre.md  voeux-2025-opens-source-eurostack.md
blog/2025/04/: fin-de-regne-numerique-le-prix-de-linaction-strategique.md
blog/2025/05/: eurostack-position-paper.md
pages/: about.md  business.md  home-about.md  open-source.md  presentations.md
src/fermigier_com/: builder.py  cli.py  page.py  watcher.py
src/fermigier_com/drafts/: post.md
src/fermigier_com/templates/: _base.j2  _footer.j2  _head.j2  _header.j2  _menu.j2  blog_index.j2  blog_post.j2  home.j2  page.j2
tailwind/: styles.css
tests/: test_builder.py
