[project]
name = "fermigier-com"

[tool.poetry]
name = "fermigier-com"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"
packages = [{include = "fermigier_com", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

jinja2 = "^3.1.2"
markdown = "^3.5.1"
typer = "^0.9.0"
attrs = "^23.1.0"
pyyaml = "^6.0.1"
argh = "^0.30.4"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
honcho = "^1.1.0"
watchfiles = "^0.21.0"
setuptools = "^69.0.3"


markdown-it-py = {extras = ["plugins"], version = "^3.0.0"}
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
alamano = "fermigier_com.cli:app"
